--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,9 +69,8 @@ jobs:
         run: |
           npm run test
 
-  cypress-run:
-    if: github.event.pull_request.head.repo.full_name == 'mirumee/saleor-dashboard'
-    if: steps.api_uri.outputs.custom_api_uri != 'https://qa.staging.saleor.cloud/graphql/'
+  cypress-run-all-env:
+    if: github.event.pull_request.head.repo.full_name == 'mirumee/saleor-dashboard' && steps.api_uri.outputs.custom_api_uri != 'https://qa.staging.saleor.cloud/graphql/'
     runs-on: ubuntu-16.04
     steps:
       - name: Checkout
@@ -108,10 +107,9 @@ jobs:
         with:
           name: cypress-videos
           path: cypress/videos
-          
+
 cypress-run:
-    if: github.event.pull_request.head.repo.full_name == 'mirumee/saleor-dashboard'
-    if: steps.api_uri.outputs.custom_api_uri == 'https://qa.staging.saleor.cloud/graphql/'
+    if: github.event.pull_request.head.repo.full_name == 'mirumee/saleor-dashboard' && steps.api_uri.outputs.custom_api_uri == 'https://qa.staging.saleor.cloud/graphql/'
     runs-on: ubuntu-16.04
     steps:
       - name: Checkout
