--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -70,7 +70,7 @@ jobs:
           npm run test
 
   cypress-run-all-env:
-    if: github.event.pull_request.head.repo.full_name == 'mirumee/saleor-dashboard' && steps.api_uri.outputs.custom_api_uri != 'https://qa.staging.saleor.cloud/graphql/'
+    if: github.event.pull_request.head.repo.full_name == 'mirumee/saleor-dashboard'
     runs-on: ubuntu-16.04
     steps:
       - name: Checkout
@@ -87,6 +87,7 @@ jobs:
           echo "::set-output name=custom_api_uri::$(echo $pull_request_body | grep -Eo "$prefix$pattern" | sed s/$prefix// | head -n 1)"
 
       - name: Cypress run
+        if: ${{ steps.api_uri.outputs.custom_api_uri}} != 'https://qa.staging.saleor.cloud/graphql/'
         uses: cypress-io/github-action@v2
         env:
           API_URI: ${{ steps.api_uri.outputs.custom_api_uri || secrets.API_URI }}
@@ -102,30 +103,8 @@ jobs:
           wait-on: http://localhost:9000/
           wait-on-timeout: 120
           spec: cypress/integration/allEnv/**/*.js
-      - uses: actions/upload-artifact@v1
-        if: always()
-        with:
-          name: cypress-videos
-          path: cypress/videos
-          
-  cypress-run:
-    if: github.event.pull_request.head.repo.full_name == 'mirumee/saleor-dashboard' && steps.api_uri.outputs.custom_api_uri == 'https://qa.staging.saleor.cloud/graphql/'
-    runs-on: ubuntu-16.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-
-      - name: Get custom API_URI
-        id: api_uri
-        # Search for API_URI in PR description
-        env:
-          pull_request_body: ${{ github.event.pull_request.body }}
-          prefix: API_URI=
-          pattern: (http|https)://[a-zA-Z0-9.-]+/graphql/?
-        run: |
-          echo "::set-output name=custom_api_uri::$(echo $pull_request_body | grep -Eo "$prefix$pattern" | sed s/$prefix// | head -n 1)"
-
       - name: Cypress run
+        if: ${{ steps.api_uri.outputs.custom_api_uri}} == 'https://qa.staging.saleor.cloud/graphql/'
         uses: cypress-io/github-action@v2
         env:
           API_URI: ${{ steps.api_uri.outputs.custom_api_uri || secrets.API_URI }}
@@ -145,7 +124,7 @@ jobs:
         with:
           name: cypress-videos
           path: cypress/videos
-
+          
   translation-messages:
     runs-on: ubuntu-latest
     steps:
