Remove mui from restricted imports

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -173,7 +173,7 @@
     "no-restricted-imports": [
       "error",
       {
-        "paths": ["@material-ui/core", "lodash"]
+        "paths": ["lodash"]
       }
     ]
   },
