--- a/package.json
+++ b/package.json
@@ -207,6 +207,7 @@
       "@test/(.*)$": "<rootDir>/testUtils/$1",
       "^lodash-es(.*)$": "lodash/$1",
       "^@material-ui/core$": "<rootDir>/node_modules/@material-ui/core",
+      "^@material-ui/icons$": "<rootDir>/node_modules/@material-ui/icons",
       "^@material-ui/styles$": "<rootDir>/node_modules/@material-ui/styles",
       "^react$": "<rootDir>/node_modules/react",
       "^react-dom$": "<rootDir>/node_modules/react-dom"
