--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "react-error-boundary": "^1.2.5",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
-    "react-infinite-scroller": "^1.2.4",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-inlinesvg": "^2.1.1",
     "react-intl": "^5.10.2",
     "react-jss": "^10.0.0",
