--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "apollo-link-context": "^1.0.18",
     "apollo-link-error": "^1.1.11",
     "apollo-upload-client": "^9.1.0",
+    "blueimp-file-upload": "^10.31.0",
     "classnames": "^2.2.6",
     "crc-32": "^1.2.0",
     "currency-codes": "^2.1.0",
@@ -137,6 +138,7 @@
     "core-js": "^3.7.0",
     "cross-env": "^6.0.3",
     "cypress": "^7.2.0",
+    "cypress-file-upload": "^5.0.8",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
