--- a/package.json
+++ b/package.json
@@ -246,10 +246,10 @@
     "start": "webpack-dev-server -d",
     "storybook": "start-storybook -p 3000 -c src/storybook/",
     "cy:run": "cypress run",
-    "cy:run_v2": "node cypress/runner/runner_v2.js",
+    "cy:run:critical": "cypress run --env tags=critical",
     "cy:run_v2:parallel": "node cypress/runner/runner_v2.js executors=4",
     "cy:run:record": "npm run cy:run -- --record",
-    "cy:open": "cypress open",
+    "cy:open": "cypress open --env",
     "cy:run:allEnv": "cypress run --spec 'cypress/integration/stagedOnly/*'",
     "test:e2e:run": "start-server-and-test start http://localhost:9000 cy:run",
     "test:e2e:run:record": "start-server-and-test start http://localhost:9000 cy:run:record",
