--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -41,7 +41,6 @@ jobs:
           start: npx local-web-server --spa index.html
           wait-on: http://localhost:9000/
           wait-on-timeout: 120
-          command: npm run cy:run:critical
       - uses: actions/upload-artifact@v1
         if: ${{ failure() }}
         with:
@@ -64,7 +63,7 @@ jobs:
           start: npx local-web-server --spa index.html
           wait-on: http://localhost:9000/
           wait-on-timeout: 120
-          spec: cypress/integration/allEnv/**/*.js
+          command: npm run cy:run:allEnv
       - uses: actions/upload-artifact@v1
         if: ${{ failure() }}
         with:
