--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "core-js": "^3.7.0",
     "cross-env": "^6.0.3",
     "cypress": "^7.2.0",
+    "cypress-file-upload": "^5.0.8",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
