tset file comp to false

--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "is-url": "^1.2.4",
     "jss": "^9.8.7",
     "keycode": "^2.2.0",
-    "lodash": "^4.17.20",
     "moment-timezone": "^0.5.32",
     "qs": "^6.9.0",
     "react": "^16.12.0",
@@ -139,6 +138,7 @@
     "cross-env": "^6.0.3",
     "cypress": "^7.2.0",
     "cypress-file-upload": "^5.0.8",
+    "del": "^6.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
@@ -158,6 +158,7 @@
     "jest-file": "^1.0.0",
     "jest-localstorage-mock": "^2.4.3",
     "lint-staged": "^10.5.1",
+    "lodash": "^4.17.21",
     "mock-apollo-client": "^0.4.0",
     "node-fetch": "^2.6.1",
     "prettier": "^1.19.1",
@@ -247,7 +248,7 @@
     "start": "webpack-dev-server -d",
     "storybook": "start-storybook -p 3000 -c src/storybook/",
     "cy:run": "cypress run",
-    "cy:run_v2:parallel": "node cypress/runner/runner_v2.js executors=2",
+    "cy:run_v2:parallel": "node --max-old-space-size=4096 cypress/runner/runner_v2.js executors=2 tags=critical",
     "cy:run:record": "npm run cy:run -- --record",
     "cy:open": "cypress open --env",
     "cy:run:critical": "cypress run --env tags=critical --spec 'cypress/integration/navigation.js','cypress/integration/products/*.js','cypress/integration/checkout/*.js'",
