Code adjustments, bump packages

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/styles": "^4.11.4",
-    "@saleor/macaw-ui": "github:mirumee/macaw-ui#03d63cd",
+    "@saleor/macaw-ui": "github:mirumee/macaw-ui#9c5ad203231fb5a67f49c8cf5eda630ced6baf27",
     "@sentry/react": "^6.0.0",
     "@types/faker": "^5.1.6",
     "apollo": "^2.32.5",
@@ -99,7 +99,7 @@
     "@pollyjs/core": "^5.0.0",
     "@pollyjs/persister-fs": "^5.0.0",
     "@release-it/bumper": "^2.0.0",
-    "@saleor/app-bridge": "^0.1.4",
+    "@saleor/app-bridge": "github:saleor/app-bridge#159634b09f78c8a14f9656282a295f73779d8518",
     "@sentry/webpack-plugin": "^1.14.0",
     "@storybook/addon-storyshots": "^5.2.8",
     "@storybook/react": "^5.1.9",
