--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "use-react-router": "^1.0.7"
   },
   "devDependencies": {
+    "@apollo/react-testing": "^3.1.4",
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.7.7",
     "@babel/plugin-proposal-class-properties": "^7.5.0",
