--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "saleor-dashboard",
-  "version": "3.1.0-a.0",
+  "version": "3.0.0-b.11",
   "main": "src/index.tsx",
   "repository": {
     "type": "git",
