--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "faker": "^5.1.0",
     "fast-array-diff": "^0.2.0",
     "fuzzaldrin": "^2.1.0",
-    "graphql": "^14.4.2",
+    "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
     "hotkeys-js": "^3.8.1",
     "is-url": "^1.2.4",
@@ -96,6 +96,9 @@
     "@babel/preset-typescript": "^7.13.0",
     "@babel/runtime": "^7.7.6",
     "@editorjs/embed": "^2.4.6",
+    "@graphql-codegen/cli": "^2.1.1",
+    "@graphql-codegen/fragment-matcher": "^3.1.0",
+    "@graphql-codegen/typescript": "^2.1.1",
     "@pollyjs/adapter-node-http": "^5.0.0",
     "@pollyjs/core": "^5.0.0",
     "@pollyjs/persister-fs": "^5.0.0",
@@ -237,15 +240,16 @@
   },
   "scripts": {
     "build-storybook": "build-storybook -c src/storybook/ -o build/storybook",
-    "build-types": "apollo client:codegen --target=typescript types --globalTypesFile=src/types/globalTypes.ts",
-    "build": "webpack -p",
+    "generate-fragment-types": "graphql-codegen",
+    "build-types": "apollo client:codegen --target=typescript types --globalTypesFile=src/types/globalTypes.ts && npm run generate-fragment-types",
+    "build": "npm run generate-fragment-types && webpack -p",
     "check-strict-null-errors": "tsc --noEmit --strictNullChecks | node scripts/count-strict-null-check-errors.js",
     "check-types": "tsc --noEmit",
     "extract-json-messages": "rimraf build/locale && cross-env NODE_ENV=extract babel src 'src/**/*.{ts,tsx}' -o build/dashboard.bundle.js",
     "extract-messages": "npm run extract-json-messages && npm run transpile-messages",
     "heroku-postbuild": "npm run build",
     "serve:lhci": "NODE_ENV=production npm run server",
-    "start": "webpack-dev-server -d",
+    "start": "npm run generate-fragment-types && webpack-dev-server -d",
     "storybook": "start-storybook -p 3000 -c src/storybook/",
     "cy:run": "cypress run",
     "cy:run:record": "npm run cy:run -- --record",
