--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "@types/react-dropzone": "^4.2.2",
     "@types/react-helmet": "^5.0.8",
     "@types/react-infinite-scroller": "^1.2.1",
+    "@types/react-responsive": "^3.0.3",
     "@types/react-router-dom": "^4.3.4",
     "@types/react-sortable-hoc": "^0.7.1",
     "@types/react-sortable-tree": "^0.3.6",
@@ -138,6 +139,8 @@
     "cross-env": "^6.0.3",
     "cypress": "^7.2.0",
     "cypress-file-upload": "^5.0.8",
+    "dotenv": "^10.0.0",
+    "dotenv-webpack": "^7.0.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
@@ -161,6 +164,7 @@
     "node-fetch": "^2.6.1",
     "prettier": "^1.19.1",
     "react-intl-translations-manager": "^5.0.3",
+    "react-responsive": "^7.0.0",
     "react-test-renderer": "^16.12.0",
     "regenerator-runtime": "^0.11.1",
     "register-service-worker": "^1.7.2",
