--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "cross-env": "^6.0.3",
     "cypress": "^7.2.0",
     "cypress-file-upload": "^5.0.8",
+    "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
@@ -162,7 +163,6 @@
     "node-fetch": "^2.6.1",
     "prettier": "^1.19.1",
     "react-intl-translations-manager": "^5.0.3",
-    "react-responsive": "^7.0.0",
     "react-test-renderer": "^16.12.0",
     "regenerator-runtime": "^0.11.1",
     "register-service-worker": "^1.7.2",
