--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "cross-env": "^6.0.3",
     "cypress": "^7.2.0",
     "cypress-file-upload": "^5.0.8",
+    "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
