--- a/package.json
+++ b/package.json
@@ -77,7 +77,6 @@
     "react-sortable-tree": "^2.6.2",
     "semver-compare": "^1.0.0",
     "slugify": "^1.4.6",
-    "typescript": "^4.2.3",
     "url-join": "^4.0.1",
     "use-react-router": "^1.0.7"
   },
@@ -178,6 +177,7 @@
     "start-server-and-test": "^1.11.0",
     "ts-jest": "^24.2.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "typescript": "^4.3.5",
     "webpack": "^4.35.3",
     "webpack-bundle-analyzer": "^4.4.1",
     "webpack-cli": "^3.3.6",
@@ -194,6 +194,7 @@
     "fsevents": "^1.2.9"
   },
   "jest": {
+    "resetMocks": false,
     "setupFiles": [
       "jest-localstorage-mock"
     ],
