Update main branch name from master

--- a/.github/workflows/deploy-master-staging.yaml
+++ b/.github/workflows/deploy-master-staging.yaml
@@ -1,8 +1,8 @@
-name: Deploy Dashboard to master staging
+name: Deploy Dashboard to main staging
 on:
   push:
     branches:
-      - master
+      - main
       - ci/staging/**
   workflow_dispatch:
 jobs:
