--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # Restrict Test Environment Deployment Workflows to be Approved by Cloud Team
-.github/workflows/test-env* @mirumee/saleor-cloud
+.github/workflows/test-env* @saleor/cloud
