--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "apollo-link-context": "^1.0.18",
     "apollo-link-error": "^1.1.11",
     "apollo-upload-client": "^9.1.0",
+    "babel-plugin-formatjs": "^10.3.11",
     "classnames": "^2.2.6",
     "color-convert": "^2.0.1",
     "crc-32": "^1.2.0",
@@ -72,7 +73,7 @@
     "react-helmet": "^6.1.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-inlinesvg": "^2.1.1",
-    "react-intl": "^5.10.2",
+    "react-intl": "^5.21.2",
     "react-jss": "^10.0.0",
     "react-markdown": "^4.3.1",
     "react-moment": "^1.0.0",
@@ -116,8 +117,9 @@
     "@types/color-convert": "^2.0.0",
     "@types/enzyme": "^3.10.8",
     "@types/fuzzaldrin": "^2.1.2",
-    "@types/jest": "^24.0.24",
+    "@types/jest": "^27.0.2",
     "@types/lodash-es": "^4.17.3",
+    "@types/murmurhash3js": "^3.0.2",
     "@types/node-fetch": "^2.5.7",
     "@types/pollyjs__adapter-node-http": "^2.0.1",
     "@types/pollyjs__persister-fs": "^2.0.1",
@@ -139,10 +141,9 @@
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^27.3.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-react-intl": "^5.1.11",
-    "babel-plugin-react-intl-auto": "^3.1.0",
     "codecov": "^3.7.1",
     "core-js": "^3.7.0",
     "cross-env": "^6.0.3",
@@ -152,10 +153,11 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
-    "eslint": "^6.8.0",
-    "eslint-loader": "^3.0.2",
+    "esbuild-loader": "^2.16.0",
+    "eslint": "^7.4.0",
     "eslint-plugin-chai-friendly": "^0.6.0",
     "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-formatjs": "^2.18.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-local-rules": "^0.1.1",
     "eslint-plugin-prefer-arrow": "^1.1.6",
@@ -164,11 +166,13 @@
     "fork-ts-checker-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^4.3.0",
-    "jest": "^24.8.0",
+    "jest": "^27.3.1",
     "jest-file": "^1.0.0",
     "jest-localstorage-mock": "^2.4.3",
     "lint-staged": "^10.5.1",
+    "loader-utils": "^3.2.0",
     "mock-apollo-client": "^0.4.0",
+    "murmurhash3js": "^3.0.1",
     "node-fetch": "^2.6.1",
     "prettier": "^1.19.1",
     "react-intl-translations-manager": "^5.0.3",
@@ -178,10 +182,11 @@
     "release-it": "^14.5.0",
     "require-context.macro": "^1.1.1",
     "rimraf": "^3.0.0",
+    "schema-utils": "^4.0.0",
     "setup-polly-jest": "^0.9.1",
     "speed-measure-webpack-plugin": "^1.5.0",
     "start-server-and-test": "^1.11.0",
-    "ts-jest": "^24.2.0",
+    "ts-jest": "^27.0.7",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^4.3.5",
     "webpack": "^4.35.3",
