--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "homepage": "https://saleor.io/",
   "engines": {
     "node": ">=14 <15",
-    "npm": ">=6.11.0 <7"
+    "npm": ">=6.11.0 <9"
   },
   "dependencies": {
     "@editorjs/editorjs": "^2.19.3",
@@ -72,7 +72,7 @@
     "react-helmet": "^6.1.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-inlinesvg": "^2.1.1",
-    "react-intl": "^5.10.2",
+    "react-intl": "^5.21.2",
     "react-jss": "^10.0.0",
     "react-markdown": "^4.3.1",
     "react-moment": "^1.0.0",
@@ -87,19 +87,8 @@
   },
   "devDependencies": {
     "@apollo/react-testing": "^3.1.4",
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-proposal-class-properties": "^7.5.0",
-    "@babel/plugin-proposal-decorators": "^7.4.4",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
-    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
-    "@babel/preset-env": "^7.5.4",
-    "@babel/preset-react": "^7.7.4",
-    "@babel/preset-typescript": "^7.13.0",
-    "@babel/runtime": "^7.7.6",
     "@editorjs/embed": "^2.4.6",
+    "@formatjs/cli": "^4.5.0",
     "@graphql-codegen/cli": "^2.1.1",
     "@graphql-codegen/fragment-matcher": "^3.1.0",
     "@graphql-codegen/typescript": "^2.1.1",
@@ -116,7 +105,7 @@
     "@types/color-convert": "^2.0.0",
     "@types/enzyme": "^3.10.8",
     "@types/fuzzaldrin": "^2.1.2",
-    "@types/jest": "^24.0.24",
+    "@types/jest": "^27.0.2",
     "@types/lodash-es": "^4.17.3",
     "@types/node-fetch": "^2.5.7",
     "@types/pollyjs__adapter-node-http": "^2.0.1",
@@ -138,11 +127,6 @@
     "@types/webappsec-credential-management": "^0.5.1",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-react-intl": "^5.1.11",
-    "babel-plugin-react-intl-auto": "^3.1.0",
     "codecov": "^3.7.1",
     "core-js": "^3.7.0",
     "cross-env": "^6.0.3",
@@ -152,10 +136,11 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
-    "eslint": "^6.8.0",
-    "eslint-loader": "^3.0.2",
+    "esbuild-loader": "^2.16.0",
+    "eslint": "^7.4.0",
     "eslint-plugin-chai-friendly": "^0.6.0",
     "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-formatjs": "^2.18.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-local-rules": "^0.1.1",
     "eslint-plugin-prefer-arrow": "^1.1.6",
@@ -164,7 +149,7 @@
     "fork-ts-checker-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^4.3.0",
-    "jest": "^24.8.0",
+    "jest": "^27.3.1",
     "jest-file": "^1.0.0",
     "jest-localstorage-mock": "^2.4.3",
     "lint-staged": "^10.5.1",
@@ -178,10 +163,11 @@
     "release-it": "^14.5.0",
     "require-context.macro": "^1.1.1",
     "rimraf": "^3.0.0",
+    "schema-utils": "^4.0.0",
     "setup-polly-jest": "^0.9.1",
     "speed-measure-webpack-plugin": "^1.5.0",
     "start-server-and-test": "^1.11.0",
-    "ts-jest": "^24.2.0",
+    "ts-jest": "^27.0.7",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^4.3.5",
     "webpack": "^4.35.3",
