re: package.json | generate i18n files with formatjs cli

--- a/package.json
+++ b/package.json
@@ -156,7 +156,6 @@
     "mock-apollo-client": "^0.4.0",
     "node-fetch": "^2.6.1",
     "prettier": "^1.19.1",
-    "react-intl-translations-manager": "^5.0.3",
     "react-test-renderer": "^16.12.0",
     "regenerator-runtime": "^0.11.1",
     "register-service-worker": "^1.7.2",
@@ -239,8 +238,8 @@
     "build": "npm run generate-fragment-types && webpack -p",
     "check-strict-null-errors": "tsc --noEmit --strictNullChecks | node scripts/count-strict-null-check-errors.js",
     "check-types": "tsc --noEmit",
-    "extract-json-messages": "rimraf build/locale && cross-env NODE_ENV=extract babel src 'src/**/*.{ts,tsx}' -o build/dashboard.bundle.js",
-    "extract-messages": "npm run extract-json-messages && npm run transpile-messages",
+    "extract-json-messages": "formatjs extract 'src/**/*.{ts,tsx}' --out-file locale/defaultMessages.json --format scripts/formatter.js",
+    "extract-messages": "npm run extract-json-messages",
     "heroku-postbuild": "npm run build",
     "serve:lhci": "NODE_ENV=production npm run server",
     "start": "npm run generate-fragment-types && webpack-dev-server -d",
@@ -254,7 +253,6 @@
     "test:e2e:run:record": "start-server-and-test start http://localhost:9000 cy:run:record",
     "test:e2e:dev": "start-server-and-test start http://localhost:9000 cy:open",
     "test": "TZ=UTC jest src/",
-    "transpile-messages": "node scripts/transpile-tx.js",
     "lint": "npx eslint \"src/**/*.@(tsx|ts|jsx|js)\" --fix ; npx prettier --check \"src/**/*.@(tsx|ts|jsx|js)\" --write",
     "postbuild": "rimraf ./build/**/*.js.map",
     "release": "release-it"
