--- a/package.json
+++ b/package.json
@@ -84,8 +84,7 @@
     "semver-compare": "^1.0.0",
     "slugify": "^1.4.6",
     "url-join": "^4.0.1",
-    "use-react-router": "^1.0.7",
-    "uuid": "^8.3.2"
+    "use-react-router": "^1.0.7"
   },
   "devDependencies": {
     "@apollo/react-testing": "^3.1.4",
