--- a/package.json
+++ b/package.json
@@ -248,10 +248,11 @@
     "start": "webpack-dev-server -d",
     "storybook": "start-storybook -p 3000 -c src/storybook/",
     "cy:run": "cypress run",
+    "cy:run:dashboard": "cypress run --record --key 1fe833f5-fca4-4454-ac55-943815b91c6c",
     "cy:run:record": "npm run cy:run -- --record",
     "cy:open": "cypress open",
-    "cy:run:critical": "cypress run --env tags=critical --spec 'cypress/integration/navigation.js','cypress/integration/products/*.js','cypress/integration/checkout/*.js'",
-    "cy:run:allEnv": "cypress run --env tags=all",
+    "cy:run:critical": "cypress run --env --record --key 1fe833f5-fca4-4454-ac55-943815b91c6c tags=critical --spec 'cypress/integration/navigation.js','cypress/integration/products/*.js','cypress/integration/checkout/*.js'",
+    "cy:run:allEnv": "cypress run --env tags=all --record --key 1fe833f5-fca4-4454-ac55-943815b91c6c",
     "test:e2e:run": "start-server-and-test start http://localhost:9000 cy:run",
     "test:e2e:run:record": "start-server-and-test start http://localhost:9000 cy:run:record",
     "test:e2e:dev": "start-server-and-test start http://localhost:9000 cy:open",
