update cypress version

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "fast-array-diff": "^0.2.0",
     "fuzzaldrin": "^2.1.0",
     "graphql": "^14.4.2",
+    "graphql-request": "^3.7.0",
     "graphql-tag": "^2.11.0",
     "hotkeys-js": "^3.8.1",
     "is-url": "^1.2.4",
@@ -136,7 +137,7 @@
     "codecov": "^3.7.1",
     "core-js": "^3.7.0",
     "cross-env": "^6.0.3",
-    "cypress": "^7.2.0",
+    "cypress": "^9.2.1",
     "cypress-file-upload": "^5.0.8",
     "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
