--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -15,20 +15,20 @@ jobs:
 
       - name: Get API_URI
         id: api_uri
-        # Search for CYPRESS_API_URI in PR description and use default if not defined
+        # Search for API_URI in PR description and use default if not defined
         env:
           pull_request_body: ${{ github.event.pull_request.body }}
-          prefix: CYPRESS_API_URI=
+          prefix: API_URI=
           pattern: (http|https)://[a-zA-Z0-9.-]+/graphql/?
           fallback_uri: ${{ secrets.CYPRESS_API_URI }}
-        run:
-          echo "::set-output name=custom_api_uri::$(echo $pull_request_body | grep -Eo "$prefix$pattern" | sed s/$prefix// | head -n 1)"
+        run: |
+          echo "::set-output name=custom_api_uri::$(echo $pull_request_body | grep -Eo "$prefix$pattern" | sed s/$prefix// | head -n 1 | { read custom_uri; if [ -z "$custom_uri" ]; then echo "$fallback_uri"; else echo "$custom_uri"; fi })"
 
       - name: Cypress run full spec
         if: ${{ steps.api_uri.outputs.custom_api_uri == 'https://qa.staging.saleor.cloud/graphql/' }}
         uses: cypress-io/github-action@v2
         env:
-          API_URI: ${{ steps.api_uri.outputs.custom_api_uri || secrets.API_URI }}
+          API_URI: ${{ steps.api_uri.outputs.custom_api_uri }}
           APP_MOUNT_URI: ${{ secrets.APP_MOUNT_URI }}
           CYPRESS_baseUrl: ${{ secrets.CYPRESS_BASEURL }}
           CYPRESS_USER_NAME: ${{ secrets.CYPRESS_USER_NAME }}
@@ -51,7 +51,7 @@ jobs:
         if: ${{ steps.api_uri.outputs.custom_api_uri != 'https://qa.staging.saleor.cloud/graphql/' }}
         uses: cypress-io/github-action@v2
         env:
-          API_URI: ${{ steps.api_uri.outputs.custom_api_uri || secrets.API_URI }}
+          API_URI: ${{ steps.api_uri.outputs.custom_api_uri }}
           APP_MOUNT_URI: ${{ secrets.APP_MOUNT_URI }}
           CYPRESS_baseUrl: ${{ secrets.CYPRESS_BASEURL }}
           CYPRESS_USER_NAME: ${{ secrets.CYPRESS_USER_NAME }}
