Record test in cypress dashboard (#1720)
* add keys to save result on cypress dashboard

* conected to the cypress dashboard

* update ubuntu version in e2e.yml

* update cypress version

* merge

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "fast-array-diff": "^0.2.0",
     "fuzzaldrin": "^2.1.0",
     "graphql": "^14.4.2",
+    "graphql-request": "^3.7.0",
     "graphql-tag": "^2.11.0",
     "hotkeys-js": "^3.8.1",
     "is-url": "^1.2.4",
@@ -137,7 +138,7 @@
     "codecov": "^3.7.1",
     "core-js": "^3.7.0",
     "cross-env": "^6.0.3",
-    "cypress": "^7.2.0",
+    "cypress": "^9.2.1",
     "cypress-file-upload": "^5.0.8",
     "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
@@ -251,10 +252,11 @@
     "start": "webpack-dev-server -d",
     "storybook": "start-storybook -p 3000 -c src/storybook/",
     "cy:run": "cypress run",
+    "cy:run:dashboard": "cypress run --record --key 1fe833f5-fca4-4454-ac55-943815b91c6c",
     "cy:run:record": "npm run cy:run -- --record",
     "cy:open": "cypress open",
-    "cy:run:critical": "cypress run --env tags=critical --spec 'cypress/integration/navigation.js','cypress/integration/products/*.js','cypress/integration/checkout/*.js'",
-    "cy:run:allEnv": "cypress run --env tags=all",
+    "cy:run:critical": "cypress run --env tags=critical --spec 'cypress/integration/navigation.js','cypress/integration/products/*.js','cypress/integration/checkout/*.js' --record --key 1fe833f5-fca4-4454-ac55-943815b91c6c",
+    "cy:run:allEnv": "cypress run --env tags=all --record --key 1fe833f5-fca4-4454-ac55-943815b91c6c",
     "test:e2e:run": "start-server-and-test start http://localhost:9000 cy:run",
     "test:e2e:run:record": "start-server-and-test start http://localhost:9000 cy:run:record",
     "test:e2e:dev": "start-server-and-test start http://localhost:9000 cy:open",
