Record test in cypress dashboard for 3.1 (#1748)
* merge changes

* update npm graphql

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -18,7 +18,7 @@ jobs:
         # Search for CYPRESS_API_URI in PR description and use default if not defined
         env:
           pull_request_body: ${{ github.event.pull_request.body }}
-          prefix: CYPRESS_API_URI=
+          prefix: API_URI=
           pattern: (http|https)://[a-zA-Z0-9.-]+/graphql/?
           fallback_uri: ${{ secrets.CYPRESS_API_URI }}
         run: |
