--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Get API_URI
         id: api_uri
-        # Search for CYPRESS_API_URI in PR description and use default if not defined
+        # Search for API_URI in PR description and use default if not defined
         env:
           pull_request_body: ${{ github.event.pull_request.body }}
           prefix: API_URI=
