--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/styles": "^4.11.4",
-    "@saleor/macaw-ui": "git://github.com/saleor/macaw-ui.git#1a883cc",
+    "@saleor/macaw-ui": "^0.3.1-1",
     "@saleor/sdk": "^0.4.1",
     "@sentry/react": "^6.0.0",
     "@types/faker": "^5.1.6",
