Add generated file to ignored

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -177,5 +177,5 @@
       }
     ]
   },
-  "ignorePatterns": ["node_modules/", "**/types/**/*"]
+  "ignorePatterns": ["node_modules/", "**/types/**/*", "type-policies.ts"]
 }
