add workflow dispatch

--- a/.github/workflows/run-e2e-at-night.yml
+++ b/.github/workflows/run-e2e-at-night.yml
@@ -3,6 +3,8 @@ name: Run e2e at night
 on:
   schedule:
     - cron: "40 16 * * *"
+  workflow_dispatch:
+    branches: ["3.0"]
 
 jobs:
   cypress-run-stable:
