--- a/.github/workflows/run-e2e-at-night.yml
+++ b/.github/workflows/run-e2e-at-night.yml
@@ -12,11 +12,11 @@ on:
 jobs:
   cypress-run-stable:
     runs-on: ubuntu-latest
-    # steps:
-    #   - name: Checkout
-    #     uses: actions/checkout@v1
-    #     with:
-    #       ref: 3.0
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+        with:
+          ref: 3.0
     #   - name: Cypress run full spec
     #     uses: cypress-io/github-action@v2
     #     env:
