--- a/.github/workflows/run-e2e-at-night.yml
+++ b/.github/workflows/run-e2e-at-night.yml
@@ -14,9 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
         with:
-          ref: 3.0
+          ref: SALEOR-5893-Run-e2e-at-night
     #   - name: Cypress run full spec
     #     uses: cypress-io/github-action@v2
     #     env:
